--- a/src/views/layouts/base.pug
+++ b/src/views/layouts/base.pug
@@ -1,2 +1,22 @@
-include partials/head.pug
-include partials/body.pug
+doctype html
+html
+  head
+    block title
+      title Default title
+    meta(charset='utf-8')
+    meta(http-equiv='x-ua-compatible', content='ie=edge')
+    meta(name='description', content='')
+    meta(name='viewport', content='width=device-width, initial-scale=1')
+    link(rel='apple-touch-icon', href='apple-touch-icon.png')
+    link(href='css/style.css', rel='stylesheet')
+    include ../data/data.pug
+  body
+    block header
+      p This is the default header.
+    block content
+      p This is the default content.
+    block footer
+      p This is the default footer.
+    block scripts
+      script(src='js/main.js')
+        
